# youtube-clone-backend

./: .env  LICENSE  README.md  pyproject.toml
api/api/: settings.py
api/user/: models.py  serializers.py  urls.py  views.py
api/user/migrations/: 0001_initial.py
